--- a/examples/rwkv-dna-trainer/config/train.toml
+++ b/examples/rwkv-dna-trainer/config/train.toml
@@ -22,7 +22,7 @@ grad_checkpoint = true
 
 level = "warn"
 use_tui = false
-upload_to_wandb = true
+upload_to_wandb = false
 wandb_api_key = "0846134e1a784dcd3495320a5ab21a73d2377a1d"
 wandb_entity_name = "rhineai"
 wandb_project_name = "dna"
